@@ -1,3 +1,8 @@
+2004-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* data.c (Fsubr_name): New fun.
+	(syms_of_data): Defsubr it.
+
 2004-04-29  Kim F. Storm  <storm@cua.dk>
 
 	* xdisp.c (null_glyph_slice): New var.
